# DetranBoasPraticas

./: .bash_history  .gitconfig  .viminfo  Cargo.toml  DetranNorma.sql  Dockerfile  Exemplo.py  README.md  TreinoGandalf.py  adicionar_exemplo_interativo.py  alteração do modelo LLM, do deepseek-r1:14b para qwen2.5:7b-instruct-12-12-2025 e redução da temperatura, de 0.7 para 0.5 .txt-12-12-2025.txt  alteração do modelo LLM, do deepseek-r1:14b para qwen2.5:7b-instruct-12-12-2025.txt-12-12-2025.txt  analisar_acuracia.py  análise do período de aprendizado não supervisionado 02-02-2026.txt  back_up_ExemploPratico].csv  boa_pratica_exemplo.rs  carga_exemplos_praticos.py  compose.yaml  continuação dos testes do 'modelo de exportação' do Gandalf após mudanças no script em python-23-12-2025.txt  continuação dos testes e inserção de mais exemplos reais-19-12-2025.txt  gandalf_logs.txt  gandalf_logs_cheio.txt  historico_detran-03-12-2025.txt  historico_detran-04-12-2025.txt  historico_detran-09-12-2025.txt  historico_detran.txt  ingestao_memoria.py  perguntar_ao_manual.py  perguntar_ao_manual.py~  relatorio_final.html  relatorio_gandalf.html  requirements.txt  result_export.csv  result_export2.csv  teste com scripts reais após ajustes no modelo de LLM e temperaturta-12-12-2025.txt  treinar_gandalf.py
.vim/: .netrwhist
Exemplos/: Cargo.toml
app_python/: AdicaoExemplo.py  AdicaoExemploPratico.py  AdicaoExemploTeorico.py  Alimentacao.py  GerarPerguntasGendalf.py  LimpezaMemoria.py  PerguntarManual.py  TreinoGandalf.py  TreinoGendalf.py  adicionar_exemplo_interativo.py  (+3 more)
(+59 files in other folders)
