[package]
name = "lucas"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
pgvector = { version = "0.4", features = ["sqlx"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
dotenv = "0.15"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
